# mavropoulos_2022

./: README.md
pipeline/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  conda.yml  pyproject.toml  setup.cfg
pipeline/askcell/: __init__.py  askCell.sh  askcell.py  check_swap.py  collect_metrics.py  demultiplex.py  logging.py  naive_caller.py  pileup2count.py  stat_reader.py  static_data.py  summarize.R  summarize.py  workflow.py  wrappers.py
pipeline/askcell/config/schema/: wgs.toml
pipeline/askcell/data/: cnv.pon_median.rds  cnv.pon_median_old.rds
pipeline/askcell/dna/: __init__.py  amplicon.py  exome.py  runIchorCNA.R  wgs.py
pipeline/askcell/rna/: __init__.py  rnaseq.py
pipeline/askcell/scrna/: __init__.py  cell_analysis.py  demultiplex.py  metrics.py  report.py  request.py  sample_analysis.py  scrna.py
pipeline/askcell/utils/: __init__.py  config.py  expression.py  fileutils.py  freeze.py  interpolate.py  merge.py  pathutils.py  plotutils.py  rowcontainer.py  shellutils.py  stringutils.py  types.py
pipeline/docs/: conf.py  index.rst
pipeline/docs/dev_manual/: index.rst
pipeline/docs/release_notes/: 2022-08-02_v0.0.1.rst  index.rst
pipeline/docs/release_notes/development_notes/: BIOIN-271.rst  BIOIN-275.rst  BIOIN-276.rst  BIOIN-278.rst  BIOIN-283.rst  index.rst
pipeline/docs/release_notes/releases/: index.rst
pipeline/docs/user_manual/: appendix.rst  background.rst  index.rst  methods.rst  process.rst  products.rst  tables_and_figures.rst  zreferences.rst
pipeline/tests/: conftest.py
pipeline/tests/data/H3YLWBCXY_pooled/: RunInfo.xml  runParameters.xml  test.json
pipeline/tests/data/H5VLNDMXX/: H5VLNDMXX.csv  RunInfo.xml  RunParameters.xml  expected_config.toml  samplesheet.csv  user_config.toml
pipeline/tests/data/test_mkfastq/: Dual_Index_Kit_TT_Set_A.csv  chromium-single-cell-sample-indexes-plate-v1.csv
pipeline/tests/data/test_rnaseq/: sample1.ReadsPerGene.out.tab  sample1.log.final.out  sample1.rRNA.alignments.json  sample1.trimmed.info.txt
pipeline/tests/data/test_scrna/: marker_genes.tsv  request.xlsx  samples.tsv  samples2.tsv  samples2_gc.tsv  samples3.tsv
pipeline/tests/data/test_summarize/: expected_cov_bias.csv  expected_merged.csv  expected_scaled_cov.csv  genome_mb_coverage.csv  normalization_baseline.csv
pipeline/tests/data/test_utils/: qc_metrics_thresholds.toml
pipeline/tests/data/test_wgs/: genome_mb_coverage.csv
pipeline/tests/unit_tests/: test_demultiplex.py  test_exome.py  test_rnaseq.py  test_stat_reader.py  test_summarize.py  test_workflow.py  test_wrappers.py
(+31 files in other folders)
